# HathiValidate

./: Jenkinsfile  MANIFEST.in  README.rst  cx_setup.py  deployment.yml  make.bat  requirements-dev.txt  requirements-freeze.txt  requirements.txt  setup.cfg  setup.py  tox.ini
ci/docker/build_windows/: Dockerfile
ci/docker/python/linux/: Dockerfile
ci/docker/python/linux/tox/: Dockerfile
ci/docker/python/shared/: requirements-ci.txt
ci/docker/python/windows/jenkins/: Dockerfile
ci/docker/python/windows/tox/: Dockerfile
docs/source/: conf.py
features/: manifest.feature  report.feature
features/steps/: manifest.py  report.py
hathi_validate/: __init__.py  __main__.py  __version__.py  cli.py  gui.py  manifest.py  process.py  report.py  result.py  validator.py  xml_schemes.py
tests/: test_process.py  test_schemes.py
