[metadata]
name = HathiValidate
version = 0.3.2
url = http://www.library.illinois.edu/dccdocs/hathi_validate
download_url = https://github.com/UIUCLibrary/HathiValidate
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Replacement for older scripts for validating Hathi Trust Packages
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu


[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1
