[metadata]
name = HathiValidate
version = 0.3.6.dev2
url = http://www.library.illinois.edu/dccdocs/hathi_validate
download_url = https://github.com/UIUCLibrary/HathiValidate
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Replacement for older scripts for validating Hathi Trust Packages
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers = Development Status :: 4 - Beta
              License :: OSI Approved :: University of Illinois/NCSA Open Source License
              Programming Language :: Python :: 3.6
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9

[options]
zip_safe = False

[tool:pytest]
testpaths = tests
addopts = --verbose

[mypy]
ignore_missing_imports = True


[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1
